--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -28,9 +28,17 @@ select {
 
 .nav-item {
     margin-left: 25vw;
+    transition: transform 0.3s ease;
+    border-radius: 10px;
 }
 
 .nav-item:hover {
-
+    transform: translateY(-5px);
     box-shadow: 5px 5px 5px red;
+}
+
+.container p {
+    font-size: medium;
+    font-weight: 600;
+
 }
