--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,6 +1,8 @@
 select {
-    margin: 10px;
+      margin: 10px;
     border-radius: 10px;
+    height: 5vh;
+    border: 1px solid #dc3545;
 }
 
 .btn {
